Setup publishing to Sonatype OSSRH
- remove old Bintray publishing

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ kotlin.code.style=official
 group=org.unbroken-dome.gradle-plugin-utils
 version=0.2.1
 
-github.url=https://github.com/unbroken-dome/gradle-plugin-utils
+projectName=Gradle Plugin Utilities
+projectDescription=A collection of utilities for developing Gradle plugins
+projectUrl=https://github.com/unbroken-dome/gradle-plugin-utils
+projectLicenseName=The MIT License (MIT)
+projectLicenseUrl=https://mit-license.org
 
-bintray.user=
-bintray.key=
-bintray.dryRun=false
-bintray.repo=tools
-bintray.labels=gradle,gradle-plugin
+githubRepo=unbroken-dome/gradle-plugin-utils
