Upgrade Dokka to 1.5.31

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ projectLicenseName=The MIT License (MIT)
 projectLicenseUrl=https://mit-license.org
 
 githubRepo=unbroken-dome/gradle-plugin-utils
+
+dokkaVersion=1.5.31
